--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script language="javascript">
             Data = new Date();
             Year = Data.getFullYear();
-            Month = Data.getMonth();
+            Month = Data.getMonth() + 1;
             Day = Data.getDate();
             var date = Year + '-' + Month + '-' + Day;
         </script>
